--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Namchee",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "cross-env": "^7.0.2",
@@ -23,9 +24,11 @@
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.6.1",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.3",
     "ts-node": "^8.10.2",
-    "typescript": "^4.0.5",
+    "typescript": "^4.2.3",
     "typesync": "^0.8.0"
   }
 }
