--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "@namchee/telepon",
   "version": "1.0.0",
   "description": "A simple boilerplate with namchee's style",
-  "main": "build/index.js",
+  "main": "build/cjs/index.js",
+  "module": "build/esm/index.js",
+  "browser": "build/umd/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf build && npm run build:cjs & npm run build:esm & npm run build:umd",
+    "build": "rm -rf build && npm run build:cjs & npm run build:esm & npm run build:umd & npm run build:declaration",
     "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir build/cjs",
     "build:esm": "tsc --project tsconfig.build.json --module es2015 --outDir build/esm",
     "build:umd": "tsc --project tsconfig.build.json --module umd --outDir build/umd",
+    "build:declaration": "tsc --project tsconfig.build.json --declaration --emitDeclarationOnly --outDir build",
     "lint": "eslint index.ts __tests__/**/*.ts"
   },
   "keywords": [
-    "boilerplate",
-    "eslint",
+    "phone-number",
+    "validator",
+    "formatter",
     "typescript"
   ],
-  "author": "Namchee",
+  "author": {
+    "name": "Cristopher Namchee",
+    "email": "cristophernamchee12@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "@auto-it/npm": "^10.20.6",
