--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.5",
   "description": "A simple boilerplate with namchee's style",
   "exports": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "type": "module",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf build && npm run build:cjs & npm run build:esm & npm run build:umd & npm run build:declaration",
-    "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir build/cjs",
-    "build:esm": "tsc --project tsconfig.build.json --module es2015 --outDir build/esm",
-    "build:umd": "tsc --project tsconfig.build.json --module umd --outDir build/umd",
-    "build:declaration": "tsc --project tsconfig.build.json --declaration --emitDeclarationOnly --outDir build",
-    "lint": "eslint index.ts __tests__/**/*.ts"
+    "build": "rm -rf build && tsc",
+    "lint": "eslint index.ts __tests__/**/*.ts",
+    "lint:fix": "eslint index.ts __tests__/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -53,5 +52,8 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
+  },
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   }
 }
