--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "./build",
     "preserveConstEnums": true,
     "removeComments": true,
+    "declaration": true,
     "strict": true,
     "strictPropertyInitialization": false,
     "noImplicitThis": false,
