--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Connect workflow to repository
         uses: actions/checkout@v2
       - name: Install all required dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Lint and test the files
-        run: npm run lint & npm run test
+        run: yarn lint & yarn test
