--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@auto-it/conventional-commits": "^10.30.0",
     "@auto-it/npm": "^10.20.6",
     "@jest/types": "^27.0.6",
     "@types/jest": "^26.0.20",
