--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "@namchee/telepon",
   "version": "1.0.8",
   "description": "Sane and easy-to-use Indonesian phone number validator and formatter.",
-  "exports": "./dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
+  "main": "./dist/index.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf build && tsc",
+    "build": "tsup index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -35,6 +40,7 @@
     "@auto-it/npm": "^10.20.6",
     "@jest/types": "^27.2.4",
     "@types/jest": "^27.0.2",
+    "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "auto": "^10.20.6",
@@ -47,13 +53,14 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "tsup": "^6.2.2",
+    "typescript": "^4.7.4"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=14.16.0"
   }
 }
