--- a/package.json
+++ b/package.json
@@ -36,25 +36,24 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@auto-it/conventional-commits": "^10.30.0",
-    "@auto-it/npm": "^10.20.6",
+    "@auto-it/conventional-commits": "^10.37.4",
+    "@auto-it/npm": "^10.37.4",
     "@jest/types": "^27.2.4",
     "@types/jest": "^27.0.2",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
-    "auto": "^10.20.6",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
+    "auto": "^10.37.4",
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.6.1",
     "jest": "^27.2.4",
-    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tsup": "^6.2.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
