--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "build": "tsup index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
@@ -38,8 +38,6 @@
   "devDependencies": {
     "@auto-it/conventional-commits": "^10.37.4",
     "@auto-it/npm": "^10.37.4",
-    "@jest/types": "^27.2.4",
-    "@types/jest": "^27.0.2",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
@@ -47,9 +45,6 @@
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.6.1",
-    "jest": "^27.2.4",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
     "tsup": "^6.2.2",
     "typescript": "^4.7.4",
     "vite": "^3.0.9",
