--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "lib": [
-      "ES2019.Array",
-      "ES2020.Promise",
-      "ES2021.String"
+      "ES2021"
     ],
     "module": "ESNext",
     "outDir": "./dist",
